--- a/http_server/pom.xml
+++ b/http_server/pom.xml
@@ -7,9 +7,12 @@
   <groupId>com.example</groupId>
   <artifactId>http_server</artifactId>
   <version>1.0.0</version>
+  <description>sample http_server codec</description>
 
   <properties>
+    <java.version>1.8</java.version>
     <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
