--- a/http_server/src/main/resources/log4j.properties
+++ b/http_server/src/main/resources/log4j.properties
@@ -1,13 +1,13 @@
-### 设置###
+### setting ###
 log4j.rootLogger = info,stdout,D,E
 
-### 输出信息到控制抬 ###
+### output information to the console ###
 log4j.appender.stdout = org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target = System.out
 log4j.appender.stdout.layout = org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss} [%t] %p %c - %m %n
 
-### 输出INFO 级别以上的日志 ###
+### output logs above INFO level ###
 log4j.appender.D = org.apache.log4j.DailyRollingFileAppender
 log4j.appender.D.File = ./logs/log.log
 log4j.appender.D.Append = true
@@ -15,7 +15,7 @@ log4j.appender.D.Threshold = INFO
 log4j.appender.D.layout = org.apache.log4j.PatternLayout
 log4j.appender.D.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss} [%t] %p %c - %m %n
 
-### 输出ERROR 级别以上的日志 ###
+### output logs above ERROR level ###
 log4j.appender.E = org.apache.log4j.DailyRollingFileAppender
 log4j.appender.E.File = ./logs/error.log 
 log4j.appender.E.Append = true
