--- a/demo/src/main/resources/settings.json
+++ b/demo/src/main/resources/settings.json
@@ -2,5 +2,6 @@
   "port": 8501,
   "mysql_url": "jdbc:mysql://localhost:3306/data?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B7",
   "mysql_user": "root",
-  "mysql_pass": "root"
+  "mysql_pass": "root",
+  "file_path": "F://upload/"
 }
